--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
     "jsx": true
   },
   "rules": {
-    "semi": 2
+    "semi": 2,
+    "no-underscore-dangle": 0
   },
   "env" : {
     "browser": true,
