--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "lint": "eslint js --ext .jsx"
+    "lint": "eslint js --ext .jsx",
+    "test:integration": "kommando --browser chrome integrationtests/emptyPage.js"
   },
   "repository": {
     "type": "git",
